style.css
/* Page body */

@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap');

* {
    padding: 0;
    margin: 0;
    border: none;
    box-sizing: border-box;
    font-family: 'Work Sans', sans-serif;
}

html, body {
    min-height: 100vh;
    width: 100%;
    background-color: hsl(275, 100%, 97%);
}

.content {
    display: flex;
    flex-direction: column;
    min-height: 100dvh;
    overflow-y: auto;
    width: 100%;
    background-color: hsl(275, 100%, 97%);
    justify-content: center;
    align-items: center;
    gap: 20px;
    position: relative;
    padding: 0;
}

/* Header */

.container {
    min-height: 200px;
    position: relative;
    padding-top: 200px;
    width: 100%;
    background-image: url("/assets/images/background-pattern-desktop.svg");
    order: 1;
    position: relative;

}

/* Card */

.faqs {
    display: grid;
    grid-template: [row1-start] "star headerqua headerqua" 80px [row2-end]
    [row2-start] "q1 q1 bot" [row2-end]
    [row3-start] "q2 q2 bot" [row3-end]
    [row4-start] "q3 q3 bot" [row4-end]
    [row5-start] "q4 q4 bot" auto [row5-end]
    / 18% auto 50px;
    width: min(350px, 80%);
    padding: 5px 30px 10px 30px;
    box-sizing: border-box;
    background-color: white;
    z-index: 1;
    margin-bottom: 20px;
    border-radius: 20px;
    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3);
    position: relative;
    order: 2;
}

/* Footer */

.attribution {
    width: 100%;
    display: flex;
    font-size: 11px;
    background: none;
    justify-content: center;
    align-items: end;
    margin: 0;
    padding: 0;
    flex-grow: 1;
    bottom: 0;
    height: 100%;
    order: 3;
}

.attribution a {
    color: hsl(228, 45%, 44%);
    text-decoration: none;
}

/* Card elements */

.estrela {
    grid-area: star;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
}

.estrela img {
    margin: 0;
    width: 20px;
}

.titulo {
    grid-area: headerqua;
    font-weight: 700;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
}

.titulo h1 {
    margin: 0;
    color: hsl(292, 42%, 14%);
    font-weight: 700;
    font-size: 30px;
    padding: 0;
}

h2 {
    font-weight: 600;
    font-size: 16px;
    color: hsl(292, 42%, 14%);
}

/* Card questions and answers */

.quest1 {
    grid-area: q1;
    overflow: hidden;
    max-height: 600px; 
    margin-bottom: 20px;
    padding: 0;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1); 
    padding-bottom: 10px; 
    margin-bottom: 10px; 
}

.resp1 {
    padding-bottom: 5px;
}

.resp1 p {
    overflow: hidden;
    max-height: 0;
    padding-top: 10px;
    transition: max-height 1.5s ease-in-out;
}

.quest1.active .resp1 p {
    overflow: hidden;
    margin: 0;
    max-height: 500px; 
}

.quest2 {
    grid-area: q2;
    overflow: hidden;
    max-height: auto; 
    margin-top: 20px;
    padding: 0;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);  
    padding-bottom: 10px; 
    margin-bottom: 10px; 
}

.resp2 {
    padding-bottom: 20px;
}

.resp2 p {
    overflow: hidden;
    max-height: 0;
    padding-top: 10px;
    transition: max-height 1.5s ease-in-out;
}

.quest2.active .resp2 p {
    margin: 0;
    max-height: 800px; 
}

.quest3 {
    grid-area: q3;
    overflow: hidden;
    max-height: 500px; 
    margin-top: 20px;
    padding: 0;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1); 
    padding-bottom: 10px; 
    margin-bottom: 10px; 
}

.resp3 {
    padding-bottom: 10px;
}

.resp3 p {
    overflow: hidden;
    max-height: 0;
    padding-top: 10px;
    transition: max-height 1.5s ease-in-out;
}

.quest3.active .resp3 p {
    overflow: hidden;
    margin: 0;
    max-height: 700px;  
}

.quest4 {
    grid-area: q4;
    overflow: hidden;
    max-height: 500px; 
    margin-top: 20px;
    padding: 0;
}

.resp4 {
    padding-bottom: 10px;
}

.resp4 p {
    overflow: hidden;
    max-height: 0;
    padding-top: 10px;
    transition: max-height 1.5s ease-in-out;
}
.quest4.active .resp4 p {
    overflow: hidden;
    margin: 0;
    max-height: 500px; 
}

/* Card buttons */

.botãomais1 {
    display: flex;
    flex-direction: column;
    align-items: end;
    justify-content: start;
    padding: 0;
    cursor: pointer;
    margin-top: 17px;
}

.botãomais1 button {
    grid-area: bot;
    background-image: url('/assets/images/icon-plus.svg');
    cursor: pointer;
    background-size: 30px;
    width: 30px;
    height: 30px;
    border: none;
    background-color: white;
}

.botãomais1.first {
    margin-top: -3px;
}

.botãomais1.third {
    margin-top: 20px;
}

.botãoclic1.active {
    background-image: url("/assets/images/icon-minus.svg");
}

.botãoclic2.active {
    background-image: url("/assets/images/icon-minus.svg");
}

.botãoclic3.active {
    background-image: url("/assets/images/icon-minus.svg");
}

.botãoclic4.active {
    background-image: url("/assets/images/icon-minus.svg");
}

.botãomais1:not(.last) {
    border-bottom: 1px solid rgba(0, 0, 0, 0.1); 
    padding-bottom: 10px; 
    margin-bottom: 10px; 
}

@media screen and (max-width: 375px) {
    .container {
        background: url("/assets/images/background-pattern-mobile.svg");
    }
  }

